Fixes fixes fixes

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -15,15 +15,15 @@
       <div class="row">
         <div class="gallery" id="upper_gallery">
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE1_SRC" alt="" class="img-responsive" />
+            <img src="#IMAGE1_SRC#" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-1-text">#IMAGE1_TEXT#</p>
           </div>
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE2_SRC" alt="" class="img-responsive" />
+            <img src="#IMAGE2_SRC#" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-2-text">#IMAGE2_TEXT#</p>
           </div>
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE3_SRC" alt="" class="img-responsive" />
+            <img src="#IMAGE3_SRC#" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-3-text">#IMAGE3_TEXT#</p>
           </div>
         </div>
@@ -31,22 +31,22 @@
       <div class="row">
         <div class="gallery" id="lower_gallery">
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE4_SRC" alt="" class="img-responsive" />
+            <img src="#IMAGE4_SRC#" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-4-text">#IMAGE4_TEXT#</p>
           </div>
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE5_SRC" alt="" class="img-responsive" />
+            <img src="#IMAGE5_SRC#" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-5-text">#IMAGE5_TEXT#</p>
           </div>
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE6_SRC" alt="" class="img-responsive" />
+            <img src="#IMAGE6_SRC#" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-6-text">#IMAGE6_TEXT#</p>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12 description" id="description">
-          <h4 class="description-header">Descripción</h4>
+          <h4 class="description-header"></h4>
           <p id="description" class="description-body">#DESCRIPTION</p>
         </div>
       </div>
