--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -3,28 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>#TITLE#</title>
+    <title>#TITLE</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <h2>#TITLE#</h2>
+        <h2>#TITLE</h2>
       </div>
       <div class="row">
         <div class="gallery" id="upper_gallery">
           <div class="col-md-4 gallery-item">
             <img src="#IMAGE1_SRC#" alt="" class="img-responsive" />
-            <p class="image-subtitle" id="image-1-text">#IMAGE1_TEXT#</p>
+            <p class="image-subtitle" id="image-1-text">#IMAGE1_TEXT</p>
           </div>
           <div class="col-md-4 gallery-item">
             <img src="#IMAGE2_SRC#" alt="" class="img-responsive" />
-            <p class="image-subtitle" id="image-2-text">#IMAGE2_TEXT#</p>
+            <p class="image-subtitle" id="image-2-text">#IMAGE2_TEXT</p>
           </div>
           <div class="col-md-4 gallery-item">
             <img src="#IMAGE3_SRC#" alt="" class="img-responsive" />
-            <p class="image-subtitle" id="image-3-text">#IMAGE3_TEXT#</p>
+            <p class="image-subtitle" id="image-3-text">#IMAGE3_TEXT</p>
           </div>
         </div>
       </div>
@@ -32,15 +32,15 @@
         <div class="gallery" id="lower_gallery">
           <div class="col-md-4 gallery-item">
             <img src="#IMAGE4_SRC#" alt="" class="img-responsive" />
-            <p class="image-subtitle" id="image-4-text">#IMAGE4_TEXT#</p>
+            <p class="image-subtitle" id="image-4-text">#IMAGE4_TEXT</p>
           </div>
           <div class="col-md-4 gallery-item">
             <img src="#IMAGE5_SRC#" alt="" class="img-responsive" />
-            <p class="image-subtitle" id="image-5-text">#IMAGE5_TEXT#</p>
+            <p class="image-subtitle" id="image-5-text">#IMAGE5_TEXT</p>
           </div>
           <div class="col-md-4 gallery-item">
             <img src="#IMAGE6_SRC#" alt="" class="img-responsive" />
-            <p class="image-subtitle" id="image-6-text">#IMAGE6_TEXT#</p>
+            <p class="image-subtitle" id="image-6-text">#IMAGE6_TEXT</p>
           </div>
         </div>
       </div>
