--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -5,7 +5,6 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <title>#TITLE</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="container">
@@ -15,15 +14,15 @@
       <div class="row">
         <div class="gallery" id="upper_gallery">
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE1_SRC#" alt="" class="img-responsive" />
+            <img src="#IMAGE1_SRC" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-1-text">#IMAGE1_TEXT</p>
           </div>
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE2_SRC#" alt="" class="img-responsive" />
+            <img src="#IMAGE2_SRC" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-2-text">#IMAGE2_TEXT</p>
           </div>
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE3_SRC#" alt="" class="img-responsive" />
+            <img src="#IMAGE3_SRC" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-3-text">#IMAGE3_TEXT</p>
           </div>
         </div>
@@ -31,15 +30,15 @@
       <div class="row">
         <div class="gallery" id="lower_gallery">
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE4_SRC#" alt="" class="img-responsive" />
+            <img src="#IMAGE4_SRC" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-4-text">#IMAGE4_TEXT</p>
           </div>
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE5_SRC#" alt="" class="img-responsive" />
+            <img src="#IMAGE5_SRC" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-5-text">#IMAGE5_TEXT</p>
           </div>
           <div class="col-md-4 gallery-item">
-            <img src="#IMAGE6_SRC#" alt="" class="img-responsive" />
+            <img src="#IMAGE6_SRC" alt="" class="img-responsive" />
             <p class="image-subtitle" id="image-6-text">#IMAGE6_TEXT</p>
           </div>
         </div>
