It works now, by adding proper styles + media query

--- a/templates/start.tmpl
+++ b/templates/start.tmpl
@@ -3,9 +3,42 @@
   <head>
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>#TITLE</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <title>Trabajo AeroYoga Beatriz Arias</title>
+    <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" media="print" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <style>
+      @page {
+          size: A4;
+      }
+      .section {
+        height: 99vh;
+        width: 100%;
+      }
+      
+      .image-landscape {
+         margin: 2.5em 0;
+         max-height: 370px;
+      }
+
+      .image-left {
+         image-orientation: 90deg ;
+         margin-left: 5em;
+         margin-right: 4em;
+         margin-top: 0.5em;
+         max-height: 370px;
+      }
+
+      .gallery {
+        margin-top: 1em;
+      }
+
+      p.image-subtitle {
+        font-size: 11px;
+        height: 25px;
+        text-align: center;
+      }
+
+    </style>
   </head>
   <body>
     <div class="container">
